--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Okay perfect!. So they have me reaching out to you to go over how to make a clai
 <br>
 <br>
 <b>YES:</b> Okay perfect and then did you have a spouse as well? This is going to pay out to your family so they want to make sure both of you have this information just in case.
-<br><b>NO:</b> Gotcha so the reason that they have us reaching out is because last year over 7 million dollars went unclaimed and that is the absolute last thing we want, is for <span class="VERBALChar sponsorDisplay">Sponsor</span> to get this get up and his family isn't able to be paid out on it</div>
+<br><b>NO:</b> Gotcha so the reason that they have us reaching out is because last year over 7 billion dollars went unclaimed and that is the absolute last thing we want, is for <span class="VERBALChar sponsorDisplay">Sponsor</span> to get this get up and his family isn't able to be paid out on it</div>
     <div class="phone-step-container"><!DOCTYPE html>
 <span class="phone-step">SETTING THE APPOINTMENT</span><br>
 The process to explain the beneficiary responsibilities is super quick and easy, we explain how it works to you real fast over a 10-15 minute zoom call. Are you working today? (TRY TO CALL RIGHT INTO)<br>
